CHuyển từ XGBoost về Randomforest

--- a/gpa_cpa_complete.ipynb
+++ b/gpa_cpa_complete.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "2c651794",
    "metadata": {},
    "outputs": [
@@ -123,11 +123,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GPA_2: MAE = 0.430\n",
-      "GPA_3: MAE = 0.343\n",
-      "GPA_4: MAE = 0.375\n",
-      "GPA_5: MAE = 0.370\n",
-      "GPA_6: MAE = 0.314\n",
+      "GPA_2: MAE = 0.443\n",
+      "GPA_3: MAE = 0.335\n",
+      "GPA_4: MAE = 0.374\n",
+      "GPA_5: MAE = 0.350\n",
+      "GPA_6: MAE = 0.304\n",
       "✅ Đã lưu mô hình RandomForestRegressor cho từng group vào file\n"
      ]
     }
@@ -163,25 +163,25 @@
     "    y = df[target]\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "    # model = RandomForestRegressor(**Best_RF_Params ,random_state=42)\n",
-    "    # model.fit(X_train, y_train)\n",
-    "    # y_pred = model.predict(X_test)\n",
-    "    # print(f\"{target}: MAE = {mean_absolute_error(y_test, y_pred):.3f}\")\n",
-    "    # gpa_dict[target] = model\n",
-    "    model = XGBRegressor(**Best_XGBoost_Params, random_state=42)\n",
+    "    model = RandomForestRegressor(**Best_RF_Params ,random_state=42)\n",
     "    model.fit(X_train, y_train)\n",
     "    y_pred = model.predict(X_test)\n",
     "    print(f\"{target}: MAE = {mean_absolute_error(y_test, y_pred):.3f}\")\n",
     "    gpa_dict[target] = model\n",
+    "    # model = XGBRegressor(**Best_XGBoost_Params, random_state=42)\n",
+    "    # model.fit(X_train, y_train)\n",
+    "    # y_pred = model.predict(X_test)\n",
+    "    # print(f\"{target}: MAE = {mean_absolute_error(y_test, y_pred):.3f}\")\n",
+    "    # gpa_dict[target] = model\n",
     "\n",
     "# Lưu toàn bộ dict mô hình vào file joblib\n",
-    "joblib.dump(gpa_dict, 'models_streamlit/next_gpa_8_ki.joblib')\n",
+    "joblib.dump(gpa_dict, 'models_streamlit/next_gpa_8_ki.joblib', compress=3)\n",
     "print(\"✅ Đã lưu mô hình RandomForestRegressor cho từng group vào file\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "caee232c",
    "metadata": {},
    "outputs": [
@@ -189,12 +189,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GPA_2: MAE = 0.513\n",
-      "GPA_3: MAE = 0.382\n",
-      "GPA_4: MAE = 0.372\n",
-      "GPA_5: MAE = 0.385\n",
-      "GPA_6: MAE = 0.342\n",
-      "GPA_7: MAE = 0.301\n",
+      "GPA_2: MAE = 0.509\n",
+      "GPA_3: MAE = 0.356\n",
+      "GPA_4: MAE = 0.358\n",
+      "GPA_5: MAE = 0.374\n",
+      "GPA_6: MAE = 0.329\n",
+      "GPA_7: MAE = 0.290\n",
       "GPA_8: MAE = 0.234\n",
       "✅ Đã lưu mô hình RandomForestRegressor cho từng group vào file\n"
      ]
@@ -229,16 +229,18 @@
     "    X = df[features]\n",
     "    y = df[target]\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "    # model = RandomForestRegressor(**Best_RF_Params ,random_state=42)\n",
-    "    # model.fit(X_train, y_train)\n",
-    "    # gpa_dict[target] = model\n",
-    "    model = XGBRegressor(**Best_XGBoost_Params, random_state=42)\n",
+    "    model = RandomForestRegressor(**Best_RF_Params ,random_state=42)\n",
     "    model.fit(X_train, y_train)\n",
     "    y_pred = model.predict(X_test)\n",
     "    print(f\"{target}: MAE = {mean_absolute_error(y_test, y_pred):.3f}\")\n",
     "    gpa_dict[target] = model\n",
+    "    # model = XGBRegressor(**Best_XGBoost_Params, random_state=42)\n",
+    "    # model.fit(X_train, y_train)\n",
+    "    # y_pred = model.predict(X_test)\n",
+    "    # print(f\"{target}: MAE = {mean_absolute_error(y_test, y_pred):.3f}\")\n",
+    "    # gpa_dict[target] = model\n",
     "# Lưu toàn bộ dict mô hình vào file joblib\n",
-    "joblib.dump(gpa_dict, 'models_streamlit/next_gpa_10_ki.joblib')\n",
+    "joblib.dump(gpa_dict, 'models_streamlit/next_gpa_10_ki.joblib', compress=3)\n",
     "print(\"✅ Đã lưu mô hình RandomForestRegressor cho từng group vào file\")"
    ]
   }
